DOC-2159: text_color.adoc
`color_cols` also affects the color grids in the table dialog.

Co-authored-by: Mitchell Crompton <mitchell.crompton@tiny.cloud>

--- a/modules/ROOT/partials/configuration/text_color.adoc
+++ b/modules/ROOT/partials/configuration/text_color.adoc
@@ -61,7 +61,7 @@ If `color_cols_foreground` is not set, the number of columns a foreground text c
 
 If both `color_cols` and `color_cols_foreground` options are set, the `color_cols_foreground` value is used.
 
-If neither `color_cols` nor `color_cols_foreground` options are set, background text color grids present with the default number of columns, **5**.
+If neither `color_cols` nor `color_cols_foreground` options are set, text color grid presents with the default number of columns, **5**.
 
 *Type:* `+Integer+`
 
