--- a/modules/ROOT/partials/configuration/text_color.adoc
+++ b/modules/ROOT/partials/configuration/text_color.adoc
@@ -147,7 +147,7 @@ tinymce.init({
 [[color_map_background]]
 === `color_map_background`
 
-This option allows for specifying a map of the text colors that will appear in the background text color grid.
+This option allows for specifying a map of the text colors that will appear in the highlight color grid.
 
 If it is not set, the background text color grid takes it values from the `+color_map+` array.
 
