DOC-2159: text_color.adoc
Terminology correction: s/background text/highlight/.

Co-authored-by: Mitchell Crompton <mitchell.crompton@tiny.cloud>

--- a/modules/ROOT/partials/configuration/text_color.adoc
+++ b/modules/ROOT/partials/configuration/text_color.adoc
@@ -32,7 +32,7 @@ If `color_cols_background` is not set, the number of columns a highlight color g
 
 If both `color_cols` and `color_cols_background` options are set, the `color_cols_background` value is used.
 
-If neither `color_cols` nor `color_cols_background` options are set, background text color grids present with the default number of columns, **5**.
+If neither `color_cols` nor `color_cols_background` options are set, the highlight color grid presents with the default number of columns, **5**.
 
 *Type:* `+Integer+`
 
