DOC-2156: text_color.adoc
Type is a number not an Integer: we handle decimal values by rounding.

Co-authored-by: Mitchell Crompton <mitchell.crompton@tiny.cloud>

--- a/modules/ROOT/partials/configuration/text_color.adoc
+++ b/modules/ROOT/partials/configuration/text_color.adoc
@@ -34,7 +34,7 @@ If both `color_cols` and `color_cols_background` options are set, the `color_col
 
 If neither `color_cols` nor `color_cols_background` options are set, the highlight color grid presents with the default number of columns, **5**.
 
-*Type:* `+Integer+`
+*Type:* `+Number+`
 
 *Default value:* 5
 
