DOC_2159: text_color.adoc
`color_map` also affects the color grids in the table dialog.

Co-authored-by: Mitchell Crompton <mitchell.crompton@tiny.cloud>

--- a/modules/ROOT/partials/configuration/text_color.adoc
+++ b/modules/ROOT/partials/configuration/text_color.adoc
@@ -109,7 +109,7 @@ tinymce.init({
 });
 ----
 
-If `+color_map+` is not explicitly set, {productname} populates the foreground and background text color grids with a default set of 22 colors.
+If `+color_map+` is not explicitly set, {productname} populates color grids with a default set of 22 colors.
 
 ==== Example: explicitly setting `+color_map+` to the default {productname} color set
 
