DOC-2159: text_color.adoc
`color_cols` also affects the color grids in the table dialog.

Co-authored-by: Mitchell Crompton <mitchell.crompton@tiny.cloud>

--- a/modules/ROOT/partials/configuration/text_color.adoc
+++ b/modules/ROOT/partials/configuration/text_color.adoc
@@ -69,7 +69,7 @@ If neither `color_cols` nor `color_cols_foreground` options are set, text color 
 
 ==== Example: using `color_cols_foreground`
 
-This example sets the number of text color grid columns to **10** then sets the foreground text color grid to display **3** columns.
+This example sets the number of columns in the default color grid to **10** then sets the foreground text color grid to display **3** columns.
 
 [source,js]
 ----
