DOC-2087: -new-material-templates/…/release-notes.adoc
File: /-new-material-templates/release-notes-template/ROOT/pages/release-notes.adoc

Edit: re-written instructions regarding dummy table cell added.

--- a/-new-material-templates/release-notes-template/ROOT/pages/release-notes.adoc
+++ b/-new-material-templates/release-notes-template/ROOT/pages/release-notes.adoc
@@ -8,11 +8,13 @@ Release notes for {productname} <x.y[.z]>
 //rest of extant table here
 
 // Dummy table cell.
-// 1. Remove the inline comment markup pre-pending this
-//    element when the number of cells in the table is
-//    odd.
-// 2. Prepend the inline comment markup to this element
-//    when the number of cells in the table is even.
+// 1. When the number of cells in the table is odd:
+//    * remove the inline comment markup pre-pending this
+//      element.
+//
+// 2. When the number of cells in the table is even:
+//    * prepend the inline comment markup to this
+//      element.
 //a|
 
 |===
