DOC-2087: -new-material-templates/…/nav.adoc
FIle: /-new-material-templates/release-notes-template/ROOT/nav.adoc

Edit: added comment line re this file being instructional only.

--- a/-new-material-templates/release-notes-template/ROOT/nav.adoc
+++ b/-new-material-templates/release-notes-template/ROOT/nav.adoc
@@ -17,3 +17,5 @@
 **** xref:<x.y[.z]>-release-notes.adoc#bug-fixes[Bug fixes]
 **** xref:<x.y[.z]>-release-notes.adoc#security-fixes[Security fixes]
 **** xref:<x.y[.z]>-release-notes.adoc#known-issues[Known issues]
+
+// This file is instructional and is never included in the published name-space.
